@@ -153,23 +153,6 @@ name|solrj
 operator|.
 name|impl
 operator|.
-name|CloudSolrClient
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|client
-operator|.
-name|solrj
-operator|.
-name|impl
-operator|.
 name|HttpSolrClient
 import|;
 end_import
@@ -260,6 +243,23 @@ operator|.
 name|request
 operator|.
 name|QueryRequest
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|client
+operator|.
+name|solrj
+operator|.
+name|request
+operator|.
+name|UpdateRequest
 import|;
 end_import
 begin_import
@@ -527,19 +527,6 @@ name|apache
 operator|.
 name|solr
 operator|.
-name|update
-operator|.
-name|DirectUpdateHandler2
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
@@ -555,16 +542,7 @@ name|solr
 operator|.
 name|util
 operator|.
-name|TimeOut
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|junit
-operator|.
-name|BeforeClass
+name|RTimer
 import|;
 end_import
 begin_import
@@ -648,15 +626,6 @@ operator|.
 name|util
 operator|.
 name|HashSet
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Iterator
 import|;
 end_import
 begin_import
@@ -3024,7 +2993,7 @@ name|QUERY
 block|}
 argument_list|)
 expr_stmt|;
-comment|// try commitWithin
+comment|// try add commitWithin
 name|long
 name|before
 init|=
@@ -3116,132 +3085,102 @@ literal|"id"
 argument_list|,
 literal|300
 argument_list|)
+argument_list|,
+name|getDoc
+argument_list|(
+literal|"id"
+argument_list|,
+literal|301
+argument_list|)
 argument_list|)
 expr_stmt|;
-specifier|final
-name|List
-argument_list|<
-name|SolrClient
-argument_list|>
-name|clientsToCheck
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
+name|waitForDocCount
 argument_list|(
-name|clients
-argument_list|)
-decl_stmt|;
-name|TimeOut
-name|timeout
-init|=
-operator|new
-name|TimeOut
-argument_list|(
-literal|45
+name|before
+operator|+
+literal|2
 argument_list|,
-name|TimeUnit
-operator|.
-name|SECONDS
+literal|30000
+argument_list|,
+literal|"add commitWithin did not work"
 argument_list|)
-decl_stmt|;
-do|do
-block|{
-specifier|final
-name|Iterator
-argument_list|<
-name|SolrClient
-argument_list|>
-name|it
+expr_stmt|;
+comment|// try deleteById commitWithin
+name|UpdateRequest
+name|deleteByIdReq
 init|=
-name|clientsToCheck
-operator|.
-name|iterator
+operator|new
+name|UpdateRequest
 argument_list|()
 decl_stmt|;
-while|while
-condition|(
-name|it
+name|deleteByIdReq
 operator|.
-name|hasNext
-argument_list|()
-condition|)
-block|{
-specifier|final
-name|SolrClient
-name|sc
-init|=
-name|it
+name|deleteById
+argument_list|(
+literal|"300"
+argument_list|)
+expr_stmt|;
+name|deleteByIdReq
 operator|.
-name|next
-argument_list|()
-decl_stmt|;
-if|if
-condition|(
-operator|(
+name|setCommitWithin
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|deleteByIdReq
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+name|waitForDocCount
+argument_list|(
 name|before
 operator|+
 literal|1
-operator|)
-operator|==
-name|sc
-operator|.
-name|query
-argument_list|(
-operator|new
-name|SolrQuery
-argument_list|(
-literal|"*:*"
-argument_list|)
-argument_list|)
-operator|.
-name|getResults
-argument_list|()
-operator|.
-name|getNumFound
-argument_list|()
-condition|)
-block|{
-name|it
-operator|.
-name|remove
-argument_list|()
-expr_stmt|;
-block|}
-block|}
-name|Thread
-operator|.
-name|sleep
-argument_list|(
-literal|100
-argument_list|)
-expr_stmt|;
-block|}
-do|while
-condition|(
-operator|!
-name|clientsToCheck
-operator|.
-name|isEmpty
-argument_list|()
-operator|&&
-operator|!
-name|timeout
-operator|.
-name|hasTimedOut
-argument_list|()
-condition|)
-do|;
-name|assertTrue
-argument_list|(
-literal|"commitWithin did not work on some nodes: "
-operator|+
-name|clientsToCheck
 argument_list|,
-name|clientsToCheck
-operator|.
-name|isEmpty
+literal|30000
+argument_list|,
+literal|"deleteById commitWithin did not work"
+argument_list|)
+expr_stmt|;
+comment|// try deleteByQuery commitWithin
+name|UpdateRequest
+name|deleteByQueryReq
+init|=
+operator|new
+name|UpdateRequest
 argument_list|()
+decl_stmt|;
+name|deleteByQueryReq
+operator|.
+name|deleteByQuery
+argument_list|(
+literal|"id:301"
+argument_list|)
+expr_stmt|;
+name|deleteByQueryReq
+operator|.
+name|setCommitWithin
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
+name|deleteByQueryReq
+operator|.
+name|process
+argument_list|(
+name|cloudClient
+argument_list|)
+expr_stmt|;
+name|waitForDocCount
+argument_list|(
+name|before
+argument_list|,
+literal|30000
+argument_list|,
+literal|"deleteByQuery commitWithin did not work"
 argument_list|)
 expr_stmt|;
 comment|// TODO: This test currently fails because debug info is obtained only
@@ -3296,6 +3235,130 @@ name|super
 operator|.
 name|printLayout
 argument_list|()
+expr_stmt|;
+block|}
+block|}
+DECL|method|waitForDocCount
+specifier|private
+name|void
+name|waitForDocCount
+parameter_list|(
+name|long
+name|expectedNumFound
+parameter_list|,
+name|long
+name|waitMillis
+parameter_list|,
+name|String
+name|failureMessage
+parameter_list|)
+throws|throws
+name|SolrServerException
+throws|,
+name|IOException
+throws|,
+name|InterruptedException
+block|{
+name|RTimer
+name|timer
+init|=
+operator|new
+name|RTimer
+argument_list|()
+decl_stmt|;
+name|long
+name|timeout
+init|=
+operator|(
+name|long
+operator|)
+name|timer
+operator|.
+name|getTime
+argument_list|()
+operator|+
+name|waitMillis
+decl_stmt|;
+while|while
+condition|(
+name|cloudClient
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|)
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+operator|!=
+name|expectedNumFound
+condition|)
+block|{
+if|if
+condition|(
+name|timeout
+operator|<=
+operator|(
+name|long
+operator|)
+name|timer
+operator|.
+name|getTime
+argument_list|()
+condition|)
+block|{
+name|fail
+argument_list|(
+name|failureMessage
+argument_list|)
+expr_stmt|;
+block|}
+name|Thread
+operator|.
+name|sleep
+argument_list|(
+literal|100
+argument_list|)
+expr_stmt|;
+block|}
+for|for
+control|(
+name|SolrClient
+name|client
+range|:
+name|clients
+control|)
+block|{
+name|assertEquals
+argument_list|(
+name|failureMessage
+argument_list|,
+name|expectedNumFound
+argument_list|,
+name|client
+operator|.
+name|query
+argument_list|(
+operator|new
+name|SolrQuery
+argument_list|(
+literal|"*:*"
+argument_list|)
+argument_list|)
+operator|.
+name|getResults
+argument_list|()
+operator|.
+name|getNumFound
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
