@@ -456,6 +456,9 @@ Bug Fixes
 * SOLR-8575: Fix HDFSLogReader replay status numbers and a performance bug where we can reopen
   FSDataInputStream too often. (Mark Miller, Patrick Dvorack)
   
+* SOLR-8651: The commitWithin parameter is not passed on for deleteById in UpdateRequest in
+  distributed queries (Jessica Cheng Mallet via Erick Erickson)
+  
 Optimizations
 ----------------------
 
